# learn_openGL_tinyrenderer

./: .clang-format  CMakeLists.txt  output.tga  readme.md
include/glad/: glad.h
output/: HelloGL  tinyrenderer  tinyrenderer_mac
src/: glad.c  main.cpp  model.cpp
